syntax = "proto3";

package messages;

service Nicservices {
    rpc AllocateNic (AllocateNicRequest) returns (AllocateNicResponse);
    rpc FreeNic(FreeNicRequest) returns (FreeNicResponse);
}

message AllocateNicRequest {
    bool autoAssignGateway =1;
}

message AllocateNicResponse{
    string nicid =1 ;
    string nicip =2 ;
    string niccidr =3;
    string nicgateway =4;
}

message FreeNicRequest {
    string nicid =1 ;
}

message FreeNicResponse {

}

service Management {
    rpc CleanUpNic (CleanUpRequest) returns (CleanUpResponse);
    rpc GraceFulStop(StopRequest) returns (StopResponse);

}

message CleanUpRequest {

}

message CleanUpResponse {

}

message StopRequest {

}

message StopResponse {

}